Flex-grow works correctly for wrapping too

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -84,15 +84,14 @@
 }
 
 .sidebar {
-  width: 25%; /* Set the width of the sidebar */
+  flex-grow: 1; /* Set the width of the sidebar */
   z-index: 1; /* Stay on top */
-  top: 0; /* Stay at the top */
-  left: 0;
   background-color: $body-bg-darker; /* Black */
   overflow-x: hidden; /* Disable horizontal scroll */
   text-color: $text-color;
+  flex-grow: 1;
 }
 
 .mainbar {
-  flex-grow: 1;
+  flex-grow: 3;
 }
